# AIResearcher

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
migrations/: 001_init.sql  002_multi_provider.sql  003_harrier_embeddings.sql  004_pdf_url.sql  005_paper_full_text.sql
src/: cli.rs  main.rs  mcp_server.rs
src/evaluation/: benchmark.rs  mod.rs
src/llm/: cheap.rs  client.rs  mod.rs  prompts.rs  strong.rs
src/models/: experiment.rs  mod.rs  paper.rs  plan.rs  summary.rs
src/pipelines/: autoresearch.rs  collection.rs  compare.rs  deep_dive.rs  deep_read.rs  explore.rs  ingest.rs  mod.rs  openalex_taxonomy.rs  pdf_resolver.rs  plan.rs  researcher.rs  retrieve.rs  structure.rs  synthesize.rs  trends.rs
src/processing/: embedding.rs  harrier.rs  harrier_worker.rs  mod.rs
src/retrieval/: arxiv.rs  crossref.rs  dblp.rs  mod.rs  openalex.rs  pubmed.rs  semantic.rs  vector.rs
src/storage/: mod.rs  postgres.rs
