[package]
name = "autoresearch-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
tracing = "0.1"

# DB
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

# optional
uuid = { version = "1", features = ["v4"] }
rand = "0.10.0"
roxmltree = "0.21.1"
pgvector = { version = "0.4.1", features = ["sqlx"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
dirs = "6.0.0"
flate2 = "1"
indicatif = "0.17"

# Embedding model (harrier-oss-v1-0.6b via candle)
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"
tokenizers = "0.22.2"

[features]
default = []
metal = ["candle-transformers/metal"]   # macOS GPU acceleration (propagates to candle-core + candle-nn)
cuda = ["candle-transformers/cuda"]     # Windows/Linux Nvidia GPU acceleration
