[package]
name = "autoresearch-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenv = "0.15"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"

# DB
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

# optional
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.10.1"
roxmltree = "0.21.1"
pgvector = { version = "0.4.1", features = ["sqlx"] }
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
dirs = "6.0.0"
flate2 = "1.1.9"
indicatif = "0.18.4"

# Embedding model (harrier-oss-v1-0.6b via candle)
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"
tokenizers = "0.22.2"

[features]
default = []
metal = ["candle-transformers/metal"]   # macOS GPU acceleration (propagates to candle-core + candle-nn)
cuda = ["candle-transformers/cuda"]     # Windows/Linux Nvidia GPU acceleration

# Temporary fork with causal-mask batch fix (pending upstream PR).
# Remove once https://github.com/huggingface/candle/pull/3484 is merged.
[patch.crates-io]
candle-core         = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
candle-nn           = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
candle-transformers = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
