[package]
name = "autoresearch-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15"
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# DB
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio"] }

# optional
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
futures = "0.3.32"
indicatif = "0.18.4"
pgvector = { version = "0.4.1", features = ["sqlx"] }
rand = "0.10.1"
roxmltree = "0.21.1"
uuid = { version = "1.23.1", features = ["v4"] }

# Embedding model (harrier-oss-v1-0.6b via candle)
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"
tokenizers = "0.23.1"

[features]
default = []
metal = ["candle-transformers/metal"]   # macOS GPU acceleration (propagates to candle-core + candle-nn)
cuda = ["candle-transformers/cuda"]     # Windows/Linux Nvidia GPU acceleration

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Optimize dependencies even in `dev` builds. Your own crate stays at opt-level 0
# (fast incremental compiles + good debugging), while heavy deps like candle run
# at full speed — without this, `cargo run` embedding/ingest is painfully slow.
[profile.dev.package."*"]
opt-level = 3

# `cargo build --release`: optimized with balanced compile time. Good for
# profiling and everyday optimized runs.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "debuginfo"

# `cargo build --profile production`: the ship build. Maximum runtime
# performance and smallest binary, at the cost of much slower compiles.
# Inherits everything from `release`, then turns the dials to max.
# Output lands in target/production/ (NOT target/release/).
# Note: `panic = "abort"` is safe here because CUDA recovery is process-based
# (the harrier worker respawns); remove it if you ever add in-process
# panic recovery (catch_unwind / JoinHandle::is_panic).
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Temporary fork with causal-mask batch fix (pending upstream PR).
# Remove once https://github.com/huggingface/candle/pull/3484 is merged.
[patch.crates-io]
candle-core         = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
candle-nn           = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
candle-transformers = { git = "https://github.com/agene0001/candle.git", branch = "fix/causal-mask-batch-broadcast" }
